Adding some first tests

--- a/cbc/README
+++ b/cbc/README
@@ -5,18 +5,10 @@ CBC.PDESys is a Python package, built on top of FEniCS, for specifying and
 solving large systems of nonlinear Partial Differential Equations (PDEs) with
 very compact, flexible and reusable code (see, e.g.,
 http://fenicsproject.org/featured/2011/pdesys.html). The package is completely
-general and targets any system of PDEs. For now we have focused development on
-Computational Fluid Dynamics in the subpackage CBC.CFD. The incompressible
-Navier-Stokes solvers that are currently implemented can be used for both
-laminar and variable viscosity turbulent flows, i.e., the Reynolds Averaged
-Navier-Stokes (RANS) equations. The fully coupled and segregated NS solvers work
-for steady or transient flows, utilizing either Newton or Picard iteration
-techniques. Implemented turbulence models are currently the standard k-epsilon,
-Spalart Allmaras, V2F or elliptic relaxation models. CBC.PDESys and its
-subpackage CBC.CFD are primarily being developed at the Center for Biomedical
-Computing at Simula Research Laboratory in Oslo, Norway. CBC.PDESys is
-distributed freely in the hope that it will be useful, but without any
-warranty. 
+general and targets any system of PDEs. CBC.PDESys is primarily being developed 
+at the Center for Biomedical Computing at Simula Research Laboratory in Oslo, 
+Norway. CBC.PDESys is distributed freely in the hope that it will be useful, but 
+without any warranty. 
 
 More information about the FEniCS Project can be found at the address
 
